# msger

./: Cargo.toml  rustfmt.toml
client/: Cargo.toml
client/src/: client.rs  error.rs  lib.rs
gui/: Cargo.toml
gui/src/: main.rs  ws_client_subscription.rs
gui/src/components/: chat_page.rs  error_popup.rs  login_page.rs  mod.rs
gui/src/components/chat_page/: chat_worker.rs
server/: Cargo.toml
server/src/: config.rs  error.rs  main.rs  server.rs
shared_types/: Cargo.toml
shared_types/src/: base64_serialize.rs  crypt.rs  lib.rs  messages.rs
