[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures = "0.3.30"
thiserror = "1.0.63"
serde_json = "1.0.127"
shared_types = { path = "../shared_types" }
simple_crypt = "0.2.3"
base64 = "0.22.1"
