[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures = "0.3.31"
thiserror = "2.0.12"
serde_json = "1.0.140"
shared_types = { path = "../shared_types" }
simple_crypt = "0.2.3"
base64 = "0.22.1"
