[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = [
    "debug",
    "tokio",
    "image",
    "advanced",
] }
iced_aw = { version = "0.11.0", default-features = false, features = ["card"] }
client = { path = "../client" }
shared_types = { path = "../shared_types" }
futures = "0.3.30"
rfd = "0.15.0"
