[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
humantime = "2.1.0"
humantime-serde = "1.1.1"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
toml = "0.8.13"
