[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
humantime = "2.2.0"
humantime-serde = "1.1.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
toml = "0.8.22"
shared_types = { path = "../shared_types" }
serde_json = "1.0.140"
simple_crypt = "0.2.3"
base64 = "0.22.1"
